# mlops-project-template

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  codeql-analysis.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: .gitignore  .pre-commit-config.yaml  AUTHORS.md  Makefile  README.md  environment.yaml  pyproject.toml
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/.devcontainer/: devcontainer.json
