# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mlops-project-templatee"
version = "1.1.1"
description = "Cookiecutter template for ML Projects"
readme = "README.md"
authors = ["Eric Lacosse <eric@gradiente.space"]
license = "MIT"
repository = "https://github.com/elacosse/mlops-project-template"
homepage = "https://github.com/elacosse/mlops-project-template"
keywords = [
    "python",
    "cookiecutter",
    "template",
    "packages",
    "makefile",
    "best-practices",
    "poetry",
    "codestyle",
    "formatters",
    "python-packages",
    "semantic-versions"
]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = []

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]
darglint = "^1.8.1"
mypy = "^1.3"
mypy-extensions = "^1.0.0"
pre-commit = "^3.0.2"
pydocstyle = "^6.1.1"
pylint = "^2.11.1"
pytest = "^7.2.1"
pyupgrade = "^3.3.1"
ruff = "^0.0.273"
pytest-html = "^3.1.1"
pytest-cov = "^4.0.0"
yamllint = "^1.29.0"

[tool.ruff]
# https://github.com/charliermarsh/ruff
line-length = 120
extend-select = ['Q']

[tool.yamllint]
max-line-length = 120

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.8
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["{{ cookiecutter.project_name }}", "hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]
