[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [{name = "{{ cookiecutter.organization }}", email = "{{ cookiecutter.email }}"}]
requires-python = ">= {{ cookiecutter.minimal_python_version }}"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
"{{ cookiecutter.project_name }}" = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.ruff]
# https://github.com/charliermarsh/ruff
line-length = {{ cookiecutter.line_length }}
extend-select = ['Q']

[tool.yamllint]
max-line-length = {{ cookiecutter.line_length }}

[tool.black]
# https://github.com/psf/black
color = true
line-length = {{ cookiecutter.line_length }}
target-version = ["py{{ cookiecutter.minimal_python_version.replace('.', '') }}"]
skip-string-normalization = true

[tool.isort]
# https://github.com/timothycrosley/isort/
line-length = {{ cookiecutter.line_length }}
known_first_party = "{{ cookiecutter.project_name }}"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = {{ cookiecutter.minimal_python_version }}
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "{{ cookiecutter.project_name }}"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
